Dark mode fix for topicview

--- a/src/components/topicView.css
+++ b/src/components/topicView.css
@@ -2,6 +2,10 @@
     font-weight: 500;
 }
 
+.topicview-author, .topicview-title, .topicviewbody, hr{
+    color: var(--font);
+}
+
 .topicview-author {
     font-weight: 300;
     margin-right: 3px;
